<resources>
    <string name="app_name">p1KARM</string>
    <string name="valor1">TECNOLOGICO DE ESTUDIOS SUPERIORES DEL ORIENTE DEL ESTADO DE MEXICO</string>
    <string name="valor2">Practica 1</string>
    <string name="valor3">Materia: Dispositivos Moviles</string>
    <string name="valor4">ISC 7S11</string>
    <string name="valor5">Rangel Miguel Kevin Alejandro</string>
    <string name="valor6">Martinez de la O Victor Hugo</string>
</resources>
